# ExpenseTracker

./: CashIn.csv  DailyInputs.py  Entertainment.csv  Food.csv  Gifts.csv  Misc.csv  Personal.csv  Savings.csv  Subscriptions.csv  Tracking.csv  Transportation.csv  main.py  pyproject.toml
