[tool.poetry]
name = "repl_python3_ExpenseTracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
xlwt = "^1.3.0"
pandas = "^1.1.3"
pysimplegui = "^4.30.0"
pysimpleguiweb = "^0.39.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
